fix: awkward sidebar collapse button transition

--- a/packages/styles/scss/components/_sidebar.scss
+++ b/packages/styles/scss/components/_sidebar.scss
@@ -2,6 +2,7 @@
 
 $-sidebar-width: var(--natu-size-spacing-11);
 $-sidebar-width-expanded: utils.px-to-rem(240px);
+$-sidebar-item-icon-size: var(--natu-size-font-6);
 
 @mixin -item {
   @include utils.control;
@@ -133,27 +134,29 @@ $-sidebar-width-expanded: utils.px-to-rem(240px);
   .natu-sidebar__item {
     @include -item;
 
-    justify-content: center;
+    justify-content: start;
     width: 100%;
 
     /* TODO: popover dismiss button looks wrong */
-
-    /* TODO: justify content change looks strange when transitioning */
 
     &--focus {
       @include utils.outline(var(--natu-color-outline-accent));
     }
 
-    /* TODO: active routerlink */
-
-    .natu-sidebar--expanded & {
-      justify-content: start;
+    .natu-sidebar--collapsed & {
+      // Prevent awkward collapse / expand transition
+      padding: 0
+        calc(
+          (#{$-sidebar-width} - #{$-sidebar-item-icon-size}) / 2 - var(--natu-control-border-width)
+        );
     }
+
+    /* TODO: active routerlink */
   }
 
   .natu-sidebar__item-icon {
     display: inline-flex;
-    font-size: var(--natu-size-font-6);
+    font-size: $-sidebar-item-icon-size;
   }
 
   .natu-sidebar__item-label {
